fix template size and align

--- a/assets/templates/classic/classic-screen.css
+++ b/assets/templates/classic/classic-screen.css
@@ -164,7 +164,7 @@ span{
 }
 
 .contact{
-  transform: translateX(-17.2mm) rotate(-90deg);
+  transform: translateX(-16.7mm) rotate(-90deg);
   transform-origin: center;
 
   width: 66.5mm;
@@ -172,7 +172,7 @@ span{
   float: left;
   justify-content: space-between;
 
-  margin-right: -47mm;
+  margin-right: -46.4mm;
 
 }
 
@@ -422,11 +422,19 @@ span{
 
 .verso{
   position:relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 278mm;
+	height: 74mm;
 }
-.verso .image{
+.verso section, .verso section .image{
 	position: relative;
-  width:280mm;
-  height:76mm;
+  /*width:278mm;
+  height:74mm;*/
+	width: 100%;
+	height: 100%;
+
 	isolation: isolate;
 	/*background-image: linear-gradient(to left, #fddb92 0%, #d1fdff 100%);*/
 }
@@ -434,7 +442,7 @@ span{
   width:100%;
   height:100%;
 	position: absolute;
-	top: 0;
+	top: 1mm;
 	left: 0;
 	mix-blend-mode: screen;
 
@@ -447,12 +455,15 @@ span{
   height: 96%;
 }
 
-.verso .image div img{
+.verso .image div div{
   width:100%;
   height:100%;
 	position: absolute;
 	top: 0;
 	left: 0;
+	background-size: 280mm 76mm;
+	background-position: center;
+	background-clip: border-box;
 
   /*background-image: linear-gradient(to left, #fddb92 0%, #d1fdff 100%);*/
 }
